src/objects/SFCCLtngPtr__SFDC_MDF__c.object
<CustomObject>
    <description>Track MDF request details including partner account, requested amount, activity type and date, and approval status.</description>
    <fields>
        <fullName>SFCCLtngPtr__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The partner account making the MDF request</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fund Requests</relationshipLabel>
        <relationshipName>R00N30000002DjDDEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Activity_Date__c</fullName>
        <description>The date the activity is planned. Optionally incorporate a validation rule to ensure that there is ample lead time to approve the request before the planned activity.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Activity_Type__c</fullName>
        <description>A list of available activity types. Customize as needed.</description>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>E-Mail Campaign</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
                <value>
                    <fullName>Online Advertising</fullName>
                </value>
                <value>
                    <fullName>Print Advertising</fullName>
                </value>
                <value>
                    <fullName>Sales Tools</fullName>
                </value>
                <value>
                    <fullName>Seminar</fullName>
                </value>
                <value>
                    <fullName>Tradeshow</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Age_Days__c</fullName>
        <description>The number of elapsed days since the request was created</description>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Amount__c</fullName>
        <description>The requested amount. Consider activating a validation rule to enforce a certain minimum or maximum amount</description>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Approved_Date__c</fullName>
        <description>The date the fund request was approved. This should be updated through a workflow approval process.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is automatically checked by the fund request approval process and in turn recalculates the budget balances</description>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Budget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optionally assign the fund request to a budget.</description>
        <label>Budget</label>
        <referenceTo>SFCCLtngPtr__SFDC_Budget__c</referenceTo>
        <relationshipName>R00N30000002DjDHEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Claim_Deadline_Date__c</fullName>
        <description>Set through the approval process this date is the date the submitter has to submit a claim related to this request</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Claim Deadline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Desired_Outcome__c</fullName>
        <description>Have the partner state what they want to accomplish from this request/ marketing activity</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Desired Outcome</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Other_Activity_Type__c</fullName>
        <description>Used when the user chooses &apos;other&apos; as the activity type</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Activity Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Partner_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The partner account owner which is derived using an APEX trigger and generally not through the UI</description>
        <inlineHelpText>The partner account owner which is derived using an APEX trigger and generally not through the UI</inlineHelpText>
        <label>Partner Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000002DjDQEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Request_Details__c</fullName>
        <description>High level information about the fund request</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Request_ID__c</fullName>
        <description>A unique id assigned to the fund request. Optionally useful for the partner as a means to identify the specific fund request record.</description>
        <displayFormat>{YY}{MM}{DD}-{0000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Select_Budget_Warning__c</fullName>
        <description>Used on the approval page to alert the user to select a budget is they have not done so already</description>
        <formula>if( SFCCLtngPtr__Budget__c = &quot;&quot;,  HYPERLINK(&quot;/&quot; &amp; Id,  &quot;IF APPROVING, PLEASE EDIT THE FUND REQUEST AND SELECT A BUDGET&quot; , &quot;_parent&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Select Budget Warning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Status__c</fullName>
        <description>The fund request approval status. This should be updated through an approval process rather than changing through the user interface</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Target_Audience__c</fullName>
        <description>The intended target audience for the fund request</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Target Audience</label>
        <type>TextArea</type>
    </fields>
    <label>Fund Request</label>
    <listViews>
        <fullName>SFCCLtngPtr__All</fullName>
        <columns>NAME</columns>
        <columns>SFCCLtngPtr__Account__c</columns>
        <columns>SFCCLtngPtr__Budget__c</columns>
        <columns>SFCCLtngPtr__Approved_Date__c</columns>
        <columns>SFCCLtngPtr__Status__c</columns>
        <columns>SFCCLtngPtr__Amount__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SFCCLtngPtr__Approved</fullName>
        <columns>NAME</columns>
        <columns>SFCCLtngPtr__Account__c</columns>
        <columns>SFCCLtngPtr__Approved_Date__c</columns>
        <columns>SFCCLtngPtr__Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SFCCLtngPtr__Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved</label>
    </listViews>
    <listViews>
        <fullName>SFCCLtngPtr__CreatedToday</fullName>
        <columns>NAME</columns>
        <columns>SFCCLtngPtr__Account__c</columns>
        <columns>SFCCLtngPtr__Budget__c</columns>
        <columns>SFCCLtngPtr__Approved_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>SFCCLtngPtr__Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
    </listViews>
    <listViews>
        <fullName>SFCCLtngPtr__Pending</fullName>
        <columns>NAME</columns>
        <columns>SFCCLtngPtr__Account__c</columns>
        <columns>SFCCLtngPtr__Status__c</columns>
        <columns>SFCCLtngPtr__Budget__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>SFCCLtngPtr__Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SFCCLtngPtr__Status__c</field>
            <operation>equals</operation>
            <value>Submitted,In Process</value>
        </filters>
        <label>Pending</label>
    </listViews>
    <listViews>
        <fullName>SFCCLtngPtr__Rejected</fullName>
        <columns>NAME</columns>
        <columns>SFCCLtngPtr__Account__c</columns>
        <columns>SFCCLtngPtr__Status__c</columns>
        <columns>SFCCLtngPtr__Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SFCCLtngPtr__Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Rejected</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fund Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>SFCCLtngPtr__Activity_Date_Days_In_Future</fullName>
        <active>true</active>
        <description>Confirm that the marketing activity date is a certain # weeks in the future</description>
        <errorConditionFormula>AND(   OR (      ISNEW(),       ISCHANGED( SFCCLtngPtr__Activity_Date__c )),    SFCCLtngPtr__Activity_Date__c &lt; (TODAY()+14) )</errorConditionFormula>
        <errorDisplayField>SFCCLtngPtr__Activity_Date__c</errorDisplayField>
        <errorMessage>The activity date should be two weeks or more in the future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SFCCLtngPtr__Require_Other_Activity_Type</fullName>
        <active>true</active>
        <description>Used to force the user to choose fill in the &apos;other activity type&apos; when &apos;other&apos; is chosen as the activity type.</description>
        <errorConditionFormula>AND(ISPICKVAL( SFCCLtngPtr__Activity_Type__c, &quot;Other&quot;), LEN(SFCCLtngPtr__Other_Activity_Type__c )=0)</errorConditionFormula>
        <errorDisplayField>SFCCLtngPtr__Other_Activity_Type__c</errorDisplayField>
        <errorMessage>Please provide details on the &apos;Other&apos; activity type.</errorMessage>
    </validationRules>
</CustomObject>